增加主題切換的開關燈功能

--- a/project/assets/core/custom.scss
+++ b/project/assets/core/custom.scss
@@ -77,7 +77,9 @@ hr {
   background: transparent;
   border: 0;
   height: 1px;
-  background-color: #fff;
+  @include themify($themes) {
+    background-color: themed('font-color');
+  }
   height: 5px;
   width: 80px;
 }
@@ -194,58 +196,39 @@ nav {
 /* Title */
 
 .navbar-default .navbar-brand {
-  color: white;
+  @include themify($themes) {
+    color: themed('font-color');
+  }
 }
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: white;
+  @include themify($themes) {
+    color: themed('font-color');
+  }
 }
 
 /* Link */
 
 .navbar-default .navbar-nav>li>a {
-  color: white;
+  @include themify($themes) {
+    color: themed('font-color');
+  }
 }
 
 .navbar-default .navbar-nav>li>a:hover,
 .navbar-default .navbar-nav>li>a:focus {
-  color: white;
-  ;
-}
-
-.navbar-default .navbar-nav>.active>a,
-.navbar-default .navbar-nav>.active>a:hover,
-.navbar-default .navbar-nav>.active>a:focus {
-  color: #ffffff;
-  background-color: #555;
-}
-
-.navbar-default .navbar-nav>.open>a,
-.navbar-default .navbar-nav>.open>a:hover,
-.navbar-default .navbar-nav>.open>a:focus {
-  color: #555;
-  background-color: white;
+  @include themify($themes) {
+    color: themed('font-color');
+  }
 }
 
 /* Caret */
 
-.navbar-default .navbar-nav>.dropdown>a .caret {
-  border-top-color: #333;
-  border-bottom-color: #333;
-}
-
-.navbar-default .navbar-nav>.dropdown>a:hover .caret,
-.navbar-default .navbar-nav>.dropdown>a:focus .caret {
-  border-top-color: #333;
-  border-bottom-color: #333;
-}
-
 .navbar-default .navbar-nav>.open>a .caret,
 .navbar-default .navbar-nav>.open>a:hover .caret,
 .navbar-default .navbar-nav>.open>a:focus .caret {
-  border-top-color: #333;
-  border-bottom-color: #333;
+  border: 0px;
 }
 
 /* Mobile version */
@@ -256,15 +239,13 @@ nav {
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #333;
-}
-
-.navbar-default .navbar-toggle .icon-bar {
-  color: #333;
+  @include themify($themes) {
+    background-color: themed('background');
+  }
 }
 
 .navbar-collapse {
-  border-color: #282729 !important;
+  border: 0px;
 }
 
 .navbar-collapse::before {
@@ -282,13 +263,6 @@ nav {
 }
 
 @media (max-width: 767px) {
-  .navbar-default .navbar-nav .open .dropdown-menu>li>a {
-    color: #333;
-  }
-  .navbar-default .navbar-nav .open .dropdown-menu>li>a:hover,
-  .navbar-default .navbar-nav .open .dropdown-menu>li>a:focus {
-    color: #333;
-  }
   .title {
     font-size: 30px;
     padding-top: 80px;
