--- a/project/assets/core/themes.scss
+++ b/project/assets/core/themes.scss
@@ -5,6 +5,12 @@ $themes: (
     background:$dulldrak,
     highlight:$orange,
     gotop:$orange
+  ),
+  theme-light: (
+    font-color:$dulldrak,
+    background:$graywhite,
+    highlight:$orange,
+    gotop:$orange
   )
 );
 /*
