綁定簡歷上的超連結

--- a/project/assets/core/custom.scss
+++ b/project/assets/core/custom.scss
@@ -22,6 +22,12 @@ body {
   }
 }
 
+a {
+  @include themify($themes) {
+    color: themed('font-color');
+  }
+}
+
 #skill {
   text-align: center;
   padding-left: 180px;
