--- a/project/assets/core/style.css
+++ b/project/assets/core/style.css
@@ -52,9 +52,10 @@ body {
 
 .title {
   font-size: 40px;
-  padding-top: 180px;
+  padding-top: 130px;
   padding-left: 80px;
-  font-size: 40px; }
+  font-size: 40px;
+  min-height: 400px; }
   .um-theme-dark .title {
     color: #ffffff; }
   .um-theme-light .title {
@@ -236,9 +237,10 @@ footer {
 @media (max-width: 767px) {
   .title {
     font-size: 30px;
-    padding-top: 80px;
+    padding-top: 30px;
     text-align: center;
-    padding-left: 0px; }
+    padding-left: 0px;
+    min-height: 0px; }
 
   .description {
     font-size: 15px;
@@ -247,7 +249,7 @@ footer {
 
   .action {
     text-align: center;
-    padding-top: 10px; }
+    padding-top: 0px; }
 
   #skill {
     text-align: center;
