防止手機版在超出版面的地方滑動

--- a/project/assets/core/custom.scss
+++ b/project/assets/core/custom.scss
@@ -10,6 +10,9 @@ body {
   @include themify($themes) {
     color: themed('font-color');
   }
+  overflow:auto;
+  overflow-y: hidden !important;
+  overflow-x: hidden !important;
 }
 
 .rounded-circle {
