增加header背景特效

--- a/project/assets/core/custom.scss
+++ b/project/assets/core/custom.scss
@@ -6,6 +6,16 @@ body {
   overflow-x: hidden;
 }
 
+#header {
+  background: transparent;
+}
+
+#canvas-particle {
+  position: absolute;
+  top: 0;
+  z-index: -1000;
+}
+
 #container {
   @include themify($themes) {
     color: themed('font-color');
