--- a/project/assets/core/style.css
+++ b/project/assets/core/style.css
@@ -9,6 +9,14 @@
 body {
   overflow-x: hidden; }
 
+#header {
+  background: transparent; }
+
+#canvas-particle {
+  position: absolute;
+  top: 0;
+  z-index: -1000; }
+
 #container {
   overflow: auto;
   overflow-y: hidden !important;
