--- a/project/assets/core/style.css
+++ b/project/assets/core/style.css
@@ -54,6 +54,16 @@ body {
 .device-description {
   font-size: 20px; }
 
+.topindex {
+  position: relative;
+  z-index: 999; }
+
+#canvas-particle {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 0; }
+
 .title {
   font-size: 40px;
   padding-top: 130px;
