修正語系為utf8

--- a/project/assets/core/custom.scss
+++ b/project/assets/core/custom.scss
@@ -64,11 +64,12 @@ a {
   z-index: 999;
 }
 
-#canvas-particle {
+#canvas-particle>canvas {
   width: 100%;
   position: absolute;
   top: 0;
   z-index: 0;
+  max-height: 450px;
 }
 
 .title {
