--- a/project/assets/core/variables.scss
+++ b/project/assets/core/variables.scss
@@ -3,4 +3,6 @@
 $white: #ffffff;
 $dulldrak:#282729;
 $orange:#ff9304;
-$graywhite:#fafafa;
+$graywhite:#f8f8f8;
+$dark100:#1b1b1b;
+$dark200:#262626;
