--- a/project/assets/core/style.css
+++ b/project/assets/core/style.css
@@ -24,7 +24,7 @@ body {
 .um-theme-dark .row {
   background: #282729; }
 .um-theme-light .row {
-  background: #fafafa; }
+  background: #f8f8f8; }
 
 .um-theme-dark a {
   color: #ffffff; }
@@ -99,37 +99,81 @@ hr {
     background-color: #282729; }
 
 #gotop {
-  display: none;
+  opacity: 1;
+  filter: alpha(opacity=100);
+  visibility: visible;
+  right: 30px;
+  color: #cdcdcd;
+  height: auto;
   position: fixed;
-  right: 20px;
-  bottom: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  font-size: 20px;
-  color: white;
-  cursor: pointer;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px; }
-  .um-theme-dark #gotop {
-    background: #ff9304; }
-  .um-theme-light #gotop {
-    background: #ff9304; }
+  bottom: 60px;
+  margin: 0;
+  z-index: 10000;
+  -webkit-transition: all .3s ease 0s;
+  -moz-transition: all .3s ease 0s;
+  -o-transition: all .3s ease 0s;
+  transition: all .3s ease 0s; }
 
 .image-cicle {
   width: 70%;
   margin: 0px auto;
   border-radius: 3px; }
 
-footer {
-  min-height: 30px;
-  height: auto; }
-  .um-theme-dark footer {
-    background: #282729; }
-  .um-theme-light footer {
-    background: #fafafa; }
+.other {
+  text-align: center; }
+  .um-theme-dark .other {
+    background: #262626;
+    color: #ffffff; }
+  .um-theme-light .other {
+    background: #262626;
+    color: #ffffff; }
+
+.topcircle > i {
+  font-size: 22px;
+  color: #b0b0b0;
+  line-height: 52px;
+  padding-left: 14.5px;
+  padding-bottom: 3px;
+  cursor: pointer;
+  font-weight: bold; }
+
+.topcircle:hover {
+  background: #e8e8e8;
+  -webkit-transition: all .2s ease 0s;
+  -moz-transition: all .2s ease 0s;
+  -o-transition: all .2s ease 0s; }
+
+.topcircle {
+  -webkit-transition: all .2s ease 0s;
+  -moz-transition: all .2s ease 0s;
+  -o-transition: all .2s ease 0s;
+  width: 52px !important;
+  height: 52px !important;
+  line-height: 52px;
+  text-decoration: none;
+  -o-border-radius: 52px;
+  -moz-border-radius: 52px;
+  -webkit-border-radius: 52px;
+  border-radius: 52px;
+  border: 2px solid #e8e8e8;
+  background: 0 0;
+  position: relative;
+  display: inline-block;
+  width: 2em;
+  height: 2em;
+  line-height: 2em;
+  vertical-align: middle; }
+
+.copyright {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-align: center; }
+  .um-theme-dark .copyright {
+    background: #1b1b1b;
+    color: #ffffff; }
+  .um-theme-light .copyright {
+    background: #1b1b1b;
+    color: #ffffff; }
 
 #progressbar1 {
   width: 150px;
@@ -186,14 +230,14 @@ footer {
 .um-theme-dark nav {
   background: #282729; }
 .um-theme-light nav {
-  background: #fafafa; }
+  background: #f8f8f8; }
 
 .um-theme-dark .navbar-default {
   background: #282729;
   border-color: #282729; }
 .um-theme-light .navbar-default {
-  background: #fafafa;
-  border-color: #fafafa; }
+  background: #f8f8f8;
+  border-color: #f8f8f8; }
 
 /* Title */
 .um-theme-dark .navbar-default .navbar-brand {
@@ -233,7 +277,7 @@ footer {
 .um-theme-dark .navbar-default .navbar-toggle:focus {
   background-color: #282729; }
 .um-theme-light .navbar-default .navbar-toggle:hover, .um-theme-light .navbar-default .navbar-toggle:focus {
-  background-color: #fafafa; }
+  background-color: #f8f8f8; }
 
 .navbar-collapse {
   border: 0px; }
@@ -250,6 +294,10 @@ footer {
   padding-top: 40px; }
 
 @media (max-width: 767px) {
+  #gotop {
+    right: 14px;
+    bottom: 24px; }
+
   .title {
     font-size: 30px;
     padding-top: 30px;
